issues/1775: Upgrade to Cassandra to 4.0-beta2