@@ -26,7 +26,7 @@
             <artifactId>strongbox-db-schema</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -52,8 +52,28 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
-                            <jvmArguments>-Xmx1024m</jvmArguments>
-                            <arguments> 
+                            <jvmArguments>
+                                -Xmx1024m
+                                -Djdk.attach.allowAttachSelf=true
+                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+                                --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
+                                --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
+                                --add-exports java.sql/java.sql=ALL-UNNAMED
+
+                                --add-opens java.base/java.lang.module=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.math=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+                                --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                            </jvmArguments>
+                            <arguments>--strongbox.db.janus-graph.storage-root=${project.build.directory}/db</arguments>
+                            <arguments>
                               --strongbox.dbimport.root=${project.build.directory}
                             </arguments>
                         </configuration>
@@ -74,11 +94,107 @@
                             <descriptors>
                                 <descriptor>src/main/assembly/db-schema.xml</descriptor>
                             </descriptors>
-                        </configuration>                        
+                        </configuration>
                     </execution>
                 </executions>
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jdk-default</id>
+            <activation>
+                <jdk>!11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>strongbox-export-db</id>
+                                <phase>prepare-package</phase> <!-- bind to the packaging phase -->
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <jvmArguments>
+                                        -Xmx1024m
+                                    </jvmArguments>
+                                    <arguments>--strongbox.db.janus-graph.storage-root=${project.build.directory}/db</arguments>
+                                    <arguments>
+                                        --strongbox.dbimport.root=${project.build.directory}
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>strongbox-export-db</id>
+                                <phase>prepare-package</phase> <!-- bind to the packaging phase -->
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <jvmArguments>
+                                        -Xmx1024m
+                                        -Djdk.attach.allowAttachSelf=true
+                                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                                        --add-exports
+                                        java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+                                        --add-exports
+                                        java.rmi/sun.rmi.registry=ALL-UNNAMED
+                                        --add-exports
+                                        java.rmi/sun.rmi.server=ALL-UNNAMED
+                                        --add-exports
+                                        java.sql/java.sql=ALL-UNNAMED
+
+                                        --add-opens
+                                        java.base/java.lang.module=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.loader=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.ref=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.reflect=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.math=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.module=ALL-UNNAMED
+                                        --add-opens
+                                        java.base/jdk.internal.util.jar=ALL-UNNAMED
+                                        --add-opens
+                                        jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                    </jvmArguments>
+                                    <arguments>--strongbox.db.janus-graph.storage-root=${project.build.directory}/db</arguments>
+                                    <arguments>
+                                        --strongbox.dbimport.root=${project.build.directory}
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
